force-app/main/default/objects/Assign_PermSetGroup_BU__mdt/Assign_PermSetGroup_BU__mdt.object-meta.xml
<CustomObject>
    <label>Assign PermSetGroup BU</label>
    <pluralLabel>Assign PermSetGroup BU</pluralLabel>
</CustomObject>