force-app/main/default/objects/Assign_PermSetGroup_BU__mdt/fields/Business_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Group_Name__c</fullName>
    <label>Business Group Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>