force-app/main/default/objects/Assign_PermSetGroup_BU__mdt/fields/Ids__c.field-meta.xml
<CustomField>
    <fullName>Ids__c</fullName>
    <description>Permission Set Group Ids separated by Semicolon(;)</description>
    <inlineHelpText>In case of multiple values, please enter Permission Set Group Ids separated by Semicolon(;)</inlineHelpText>
    <label>Ids</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>