force-app/main/default/objects/Assign_PermSetGroup_BU__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>License</fullName>
                <default>true</default>
                <label>License</label>
            </value>
            <value>
                <fullName>Permissionset Group</fullName>
            </value>
            <value>
                <fullName>Public Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>